added contact.html portfolio.html

--- a/contact.html
+++ b/contact.html
@@ -5,19 +5,48 @@
   <meta charset="utf-8">
   <title>Contact Me</title>
   <link rel="stylesheet" href="assets/css/style.css">
-
 </head>
 
-<body id="top">
-  <h1>This page is not done yet</h1>
-  <p>Please check Back later.</p>
+<body id="top" class="main-background">
 
-  <p><strong>Note:</strong> feel free to contact me about jobs.</p>
-  <a class="btn btn-alt" href="mailto:lwpeter44@gmail.com?subject=Reaching%20Out&body=How%20are%20you">Email Me</a>
+  <header>
+    <div class="head-nav">
+      <div class="head_line">
+        <h1 class="name-color">Peter Winston</h1>
+      </div>
+      <nav>
+        <a class="page-section-1-2" href="index.html">Home</a>
+        <a class="page-section-1-2" href="contact.html">contact</a>
+        <a class="page-section-3" href="portfolio.html">portfolio</a>
+      </nav>
+    </div>
 
-  <a href="#top">Back to top</a>
-  <a href="index.html">to main page</a>
+  </header>
 
+
+
+  <section>
+
+    <section class="main-section container about-borders-and-background">
+      <h1 class="about-me">Contact</h1>
+
+      
+    </section>
+
+    <footer class="primary-footer group primary-footer-nav sticky-footer">
+      <nav>
+        <div class="text-place">
+          <a href="index.html">Home</a>
+          <a href="contact.html">contact</a>
+          <a href="portfolio.html">portfolio</a>
+          <a href="https://github.com/Prince0fTime" target="_blank">My github</a>
+          <a href="#top">Back to top</a>
+        </div>
+      </nav>
+    </footer>
+
+
+  </section>
 
 </body>
 
