--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
 <head>
     <meta charset="utf-8">
     <title>My Portfolio</title>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
-<body id="top">
+<body id="top" class="main-background">
 
     <header>
-        <div>
-            <div>
-                <h3>Peter Winston</h3>
-
+        <div class="head-nav">
+            <div class="head_line">
+                <h1 class="name-color">Peter Winston</h1>
             </div>
             <nav>
-                <a href="index.html">Home</a>
-                <a href="contact.html">contact</a>
-                <a href="portfolio.html">portfolio</a>
+                <a class="page-section-1-2" href="index.html">Home</a>
+                <a class="page-section-1-2" href="contact.html">contact</a>
+                <a class="page-section-3" href="portfolio.html">portfolio</a>
             </nav>
         </div>
 
@@ -27,10 +27,10 @@
 
     <section>
 
-        <section >
-            <h2>About Me</h2>
+        <section class="main-section container about-borders-and-background">
+            <h1 class="about-me">About Me</h1>
 
-            <img src="assets/images/200x200.png" width="200" height="200">
+            <img class="pics" src="assets/images/200x200.png" width="200" height="200">
 
             <!--this is just simple text-->
             <p>
@@ -68,9 +68,9 @@
             </p>
         </section>
 
-        <footer>
+        <footer class="primary-footer group primary-footer-nav sticky-footer">
             <nav>
-                <div>
+                <div class="text-place">
                     <a href="index.html">Home</a>
                     <a href="contact.html">contact</a>
                     <a href="portfolio.html">portfolio</a>
