--- a/portfolio.html
+++ b/portfolio.html
@@ -1,16 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>portfolio</title>
-  </head>
-  <body  id="top">
-    <h1>This page is not done yet</h1>
-    <p>Please check Back later.</p>
 
-	<a href="#top">Back to top</a>
-	<a href="index.html">to main page</a>
+<head>
+  <meta charset="utf-8">
+  <title>Portfolio</title>
+  <link rel="stylesheet" href="assets/css/style.css">
+</head>
 
-	
-  </body>
+<body id="top" class="main-background">
+
+  <header>
+    <div class="head-nav">
+      <div class="head_line">
+        <h1 class="name-color">Peter Winston</h1>
+      </div>
+      <nav>
+        <a class="page-section-1-2" href="index.html">Home</a>
+        <a class="page-section-1-2" href="contact.html">contact</a>
+        <a class="page-section-3" href="portfolio.html">portfolio</a>
+      </nav>
+    </div>
+
+  </header>
+
+
+
+  <section>
+
+    <section class="main-section container about-borders-and-background">
+      <h1 class="about-me">Portfolio</h1>
+
+
+    </section>
+
+    <footer class="primary-footer group primary-footer-nav sticky-footer">
+      <nav>
+        <div class="text-place">
+          <a href="index.html">Home</a>
+          <a href="contact.html">contact</a>
+          <a href="portfolio.html">portfolio</a>
+          <a href="https://github.com/Prince0fTime" target="_blank">My github</a>
+          <a href="#top">Back to top</a>
+        </div>
+      </nav>
+    </footer>
+
+
+  </section>
+
+</body>
+
 </html>
