changed page name

--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,7 @@
   <section>
 
     <section class="main-section container about-borders-and-background">
-      <h1 class="about-me">Portfolio</h1>
+      <h1 class="about-me">Portfolio Gallery</h1>
 
 
     </section>
