--- a/portfolio.html
+++ b/portfolio.html
@@ -28,8 +28,43 @@
   <section>
 
     <section class="main-section container about-borders-and-background">
+
       <h1 class="about-me">Portfolio Gallery</h1>
 
+      <div class="col-1 col-1-3">
+        <div class="tag">
+          <p class="text-m">Featured</p>
+        </div>
+        <img src="assets/images/200x200.png" width="200" height="200">
+      </div>
+
+      <div class="col-2 col-1-3">
+        <div class="tag">
+          <p class="text-m">Featured</p>
+        </div>
+        <img src="assets/images/200x200.png" width="200" height="200">
+      </div>
+
+      <div class="col-1 col-1-3">
+        <div class="tag">
+          <p class="text-m">Featured</p>
+        </div>
+        <img src="assets/images/200x200.png" width="200" height="200">
+      </div>
+
+      <div class="col-2 col-1-3">
+        <div class="tag">
+          <p class="text-m">Featured</p>
+        </div>
+        <img src="assets/images/200x200.png" width="200" height="200">
+      </div>
+
+      <div class="col-1 col-1-3">
+        <div class="tag">
+          <p class="text-m">Featured</p>
+        </div>
+        <img src="assets/images/200x200.png" width="200" height="200">
+      </div>
 
     </section>
 
