--- a/contact.html
+++ b/contact.html
@@ -16,8 +16,8 @@
       </div>
       <nav>
         <a class="page-section-1-2" href="index.html">Home</a>
-        <a class="page-section-1-2" href="contact.html">contact</a>
-        <a class="page-section-3" href="portfolio.html">portfolio</a>
+        <a class="page-section-1-2" href="contact.html">Contact</a>
+        <a class="page-section-3" href="portfolio.html">Portfolio</a>
       </nav>
     </div>
 
@@ -30,15 +30,42 @@
     <section class="main-section container about-borders-and-background">
       <h1 class="about-me">Contact</h1>
 
-      
+      <form class="col-1-3 input-setup" action="#" method="post">
+        <fieldset class="message-form">
+
+          <label>
+            Name
+            <input type="text" name="name" placeholder="Full name" required>
+          </label>
+
+          <label>
+            Email
+            <input type="email" name="email" placeholder="Email address" required>
+          </label>
+
+          <label>
+            Message
+            <textarea name="Message"></textarea>
+          </label>
+
+        </fieldset>
+
+        <input class="button" type="submit" name="submit" value="Submit">
+
+
+
+
+
+      </form>
+
     </section>
 
     <footer class="primary-footer group primary-footer-nav sticky-footer">
       <nav>
         <div class="text-place">
           <a href="index.html">Home</a>
-          <a href="contact.html">contact</a>
-          <a href="portfolio.html">portfolio</a>
+          <a href="contact.html">Contact</a>
+          <a href="portfolio.html">Portfolio</a>
           <a href="https://github.com/Prince0fTime" target="_blank">My github</a>
           <a href="#top">Back to top</a>
         </div>
