--- a/portfolio.html
+++ b/portfolio.html
@@ -16,8 +16,8 @@
       </div>
       <nav>
         <a class="page-section-1-2" href="index.html">Home</a>
-        <a class="page-section-1-2" href="contact.html">contact</a>
-        <a class="page-section-3" href="portfolio.html">portfolio</a>
+        <a class="page-section-1-2" href="contact.html">Contact</a>
+        <a class="page-section-3" href="portfolio.html">Portfolio</a>
       </nav>
     </div>
 
@@ -72,8 +72,8 @@
       <nav>
         <div class="text-place">
           <a href="index.html">Home</a>
-          <a href="contact.html">contact</a>
-          <a href="portfolio.html">portfolio</a>
+          <a href="contact.html">Contact</a>
+          <a href="portfolio.html">Portfolio</a>
           <a href="https://github.com/Prince0fTime" target="_blank">My github</a>
           <a href="#top">Back to top</a>
         </div>
