--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
     <section class="main-section container about-borders-and-background">
       <h1 class="about-me">Contact</h1>
 
-      <form class="col-1-3 input-setup" action="#" method="post">
+      <form class="col-1-3 input-setup">
         <fieldset class="message-form">
 
           <label>
